Added functionality to visualize blocks and their ocr results

--- a/src/config.ini
+++ b/src/config.ini
@@ -6,6 +6,7 @@ SAMPLES_FOLDER=samples
 
 
 [output]
+LAYOUT_STRUCTURE_IMG_FOLDERNAME=layout_imgs
 RESULTS_FOLDERNAME=results
 OUTPUT_JSON_FOLDER_NAME=json_files
 PAGE_BLOCK_IMAGE_FOLDERNAME=page_block_images
